--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -6,8 +6,9 @@ $primary-color: #333;
 
 .hello {
   color: $primary-color;
-  background: url('../images/bird.jpg');
+  // background: url('../images/bird.jpg');
   font-family: 'ChakraPetch';
+  font-size: 32px;
 }
 img {
   max-width: 200px;
